# CampusNow

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  CI_CD_SETUP.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_QUICK_REFERENCE.md  SECURITY.md  TESTING.md  check_db.py  codecov.yml  debug.sh  docker-compose.yml  pyproject.toml  ruff.toml  settings.json  street_view_graph.json  timetable.json
.github/: branch-protection.yml
.github/workflows/: ci.yml  code-quality.yml  dependencies.yml  release.yml  tag-validation.yml
api-service/: Dockerfile  main.py  requirements.txt  seed_mock_data.py  seed_test_data.py
api-service/app/: __init__.py  auth.py  config.py  utils.py
api-service/app/db/: __init__.py  mongo_client.py
api-service/app/models/: __init__.py  building.py  event.py  image.py  lecture.py  room.py  schedule.py  settings.py  streetview.py  studiengang.py
api-service/app/routers/: __init__.py  buildings.py  events.py  images.py  lectures.py  rooms.py  schedule.py  scheduler.py  settings.py  streetview.py  studiengaenge.py  timetable.py
api-service/app/services/: __init__.py  ical_import.py
api-service/tests/: conftest.py  test_api.py  test_unit_ical_import.py  test_unit_mongo_client.py  test_unit_utils.py
docs/: DEVELOPMENT.md  PIPELINE_OPTIMIZATION_SUMMARY.md  QUICKSTART_CICD.md  TAG_AND_RELEASE.md  WORKFLOW_DIAGRAMS.md  WORKFLOW_OPTIMIZATION.md
scraper-service/: Dockerfile  config.py  main.py  requirements.txt  test_scraper.py
scraper-service/db/: __init__.py  mongo_client.py
scraper-service/scheduler/: __init__.py  tasks.py
scraper-service/scraper/: __init__.py  ical_parser.py  image_downloader.py  starplan_scraper.py  study_program_mapping.py
scripts/: api_smoke_test.py  init_db.js
